Upgrade ember-cli & test node 8 on travis

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
 /dist
 /tmp
-/fastboot-dist
 
 # dependencies
 /node_modules
@@ -14,7 +13,11 @@
 /connect.lock
 /coverage/*
 /libpeerconnection.log
-npm-debug.log
+npm-debug.log*
+yarn-error.log
 testem.log
 
-.scratch
+# ember-try
+.node_modules.ember-try/
+bower.json.ember-try
+package.json.ember-try
