--- a/package.json
+++ b/package.json
@@ -19,34 +19,34 @@
   },
   "repository": "ember-cli/ember-try",
   "engines": {
-    "node": ">= 4.5"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "author": "Katie Gengler",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.2",
+    "bower": "^1.8.0",
+    "broccoli-asset-rev": "^2.4.5",
     "chai": "^3.5.0",
     "codeclimate-test-reporter": "^0.3.1",
-    "ember-cli": "2.8.0",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.3",
-    "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "ember-cli-qunit": "^2.1.0",
-    "ember-cli-release": "^0.2.9",
+    "ember-cli": "~2.14.2",
+    "ember-cli-babel": "^6.3.0",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-eslint": "^3.0.0",
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.3",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.5.1",
-    "ember-resolver": "^2.0.3",
-    "eslint": "^3.16.1",
+    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.14.1",
     "glob": "^7.0.0",
     "istanbul": "1.0.0-alpha.2",
-    "loader.js": "^4.0.1",
+    "loader.js": "^4.2.3",
     "mocha": "^2.2.5",
     "mockery": "^1.4.0",
     "tmp-sync": "^1.1.0"
